--- a/packages/energy/goodwe_dis_charge_times.yaml
+++ b/packages/energy/goodwe_dis_charge_times.yaml
@@ -6,11 +6,11 @@ sensor:
     duration:
       minutes: 5
     entities:
-      - sensor.goodwe_pbattery1
+      - sensor.battery_power
 
   - platform: statistics
     name: Battery SoC change over 10 minutes
-    entity_id: sensor.goodwe_battery_soc
+    entity_id: sensor.battery_state_of_charge
     state_characteristic: change
     max_age:
       minutes: 10
@@ -26,18 +26,18 @@ sensor:
         icon_template: "mdi:battery-high"
         value_template: >-
           {% set battery_capacity = 14 %}
-          {% set battery_current = (battery_capacity * (states('sensor.goodwe_battery_soc')|int/100))|round(2) %}
+          {% set battery_current = (battery_capacity * (states('sensor.battery_state_of_charge')|int/100))|round(2) %}
           {{ battery_current }}
       battery_available_dod:
         friendly_name: "Battery Available (DoD)"
         unit_of_measurement: 'kWh'
         icon_template: "mdi:battery-high"
         value_template: >-
-          {% set soc = states('sensor.goodwe_battery_soc')|int %}
+          {% set soc = states('sensor.battery_state_of_charge')|int %}
           {% set battery_capacity = 14 %}
           {% set battery_dod_ongrid = states('sensor.goodwe_depth_of_discharge_on_grid') %}
           {% set battery_dod_offgrid = 80 %}
-          {% set battery_dod = iif(is_state('sensor.goodwe_work_mode_label', 'Normal (On-Grid)'), battery_dod_ongrid, battery_dod_offgrid) %}
+          {% set battery_dod = iif(is_state('sensor.energy_mode', 'Normal (On-Grid)'), battery_dod_ongrid, battery_dod_offgrid) %}
           {% set battery_per_not_available = 100 - battery_dod|int %}
           {% set battery_per_available = (soc - battery_per_not_available) %}
           {% set battery_current = (battery_capacity * (battery_per_available/100))|round(2) %}
@@ -49,7 +49,7 @@ sensor:
         icon_template: "mdi:battery-high"
         value_template: >-
           {% set battery_capacity = 14 %}
-          {% set battery_current = (battery_capacity * (states('sensor.goodwe_battery_soc')|int/100))|round(2) %}
+          {% set battery_current = (battery_capacity * (states('sensor.battery_state_of_charge')|int/100))|round(2) %}
           {% set battery_to_charge = (battery_capacity - battery_current)|round(2) %}
           {{ battery_to_charge }}
       # Remaining minutes
