--- a/packages/energy/eskomsepush.yaml
+++ b/packages/energy/eskomsepush.yaml
@@ -13,18 +13,32 @@ sensor:
         friendly_name: Loadshedding slot forecast
         unique_id: loadshedding_slot_forecast
         value_template: >
-          {%if state_attr('sensor.load_shedding_area_capetown_6_durbanville','forecast')|count > 0 %}
+          {%- set show = namespace(count=1) -%}
+          {% set area_sensor = "sensor.load_shedding_area_capetown_6_durbanville"%}
+          {% set area_schedule = state_attr(area_sensor, "forecast") %}
+          {%- set area_sc = namespace(count=area_schedule|count) -%}
+          {%- set skip = namespace(next=false) -%}
+          {% if area_sc.count > 0 %}
           {%- set data = namespace(count=1) -%}
-          {%- for event in states['sensor.load_shedding_area_capetown_6_durbanville'].attributes.forecast -%}
-          {% if data.count <= 1 %}
+          {%- set test = namespace(nextslot=False) -%}
+          {%- for event in area_schedule -%}
+          {% if data.count <= show.count < area_sc.count and skip.next == false  %}
           {%- set start = as_timestamp(event['start_time']) %}
           {%- set end = as_timestamp(event['end_time']) %}
           {%- set startdelta = as_timestamp(event['start_time'] + timedelta(minutes=30)) %}
-          {%- if startdelta != end %}
+          {%- if data.count < area_sc.count and area_schedule[data.count-1].end_time == area_schedule[data.count].start_time %}
+          {{- start | timestamp_custom('%a %d %b:') }} {{- start | timestamp_custom(' %H:%M') }} to {{- as_timestamp(area_schedule[data.count].end_time) | timestamp_custom(' %H:%M') }}
+          {{- '\n' -}}
+          {%- set data.count = data.count + 1 %}
+          {%- set skip.next = true %}
+          {%- elif startdelta != end %}
           {{- start | timestamp_custom('%a %d %b:') }} {{- start | timestamp_custom(' %H:%M') }} to {{- end | timestamp_custom(' %H:%M') }}
           {{- '\n' -}}
           {%- set data.count = data.count + 1 %}
           {%-endif%}
+          {%- set test.nextslot=False %}
+          {%- elif skip.next == true %}
+          {%- set skip.next = false %}
           {%-endif%}{%- endfor -%}
           {%-else%}
           None scheduled
