--- a/packages/security/alarm.yaml
+++ b/packages/security/alarm.yaml
@@ -1,5 +1,6 @@
 ---
-envisalink:
+#envisalink:
+envisalink_new:
   #-
   #                  _           _ _       _
   #   ___ _ ____   _(_)___  __ _| (_)_ __ | | __
